[package]
name = "maelstrom"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
log = "0.4"
serde =  { version = "1.0",features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "io-std", "io-util", "sync", "time"] }
